# electoral-systems-2

./: deploy.yaml  setup.cfg
app/: requirements.txt
