[metadata]
name = electoral-systems
description = Dash app for visualising the effect of using different electoral systems in previous elections.
author = Alejandro de Miquel
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    app
install_requires =
  dash==2.14.1
  dash-bootstrap-components==1.5.0
  dash-daq==0.5.0
  geojson==3.1.0
  gunicorn==21.2.0
  numpy==1.26.1
  pandas==2.1.2
plotly==5.18.0
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
electoral-systems = py.typed

[flake8]
max-line-length = 160
